--- a/1_3_Garpennikov.html
+++ b/1_3_Garpennikov.html
@@ -11,8 +11,9 @@
         <header>
             <article class="header_line">
                 <img class="header__button_Burgericon" src="icons/burger.svg" alt="Меню">
+                <img class="header__dividerIcon1" src="icons/divider.svg" alt=""> 
                 <img class="header__link_logoIcon" src="imgs/Group.svg" alt="Логотип компании">
-                <img class="header__dividerIon" src="icons/divider.svg" alt=""> 
+                <img class="header__dividerIon2" src="icons/divider.svg" alt=""> 
                 <img class="header__button_repairIcon" src="icons/repair.svg" alt="Вкладка починки">  
                 <img class="header__button_checkStatusIcon" src="icons/checkstatus.svg" alt="">
             </article>
