--- a/1_3_Garpennikov.html
+++ b/1_3_Garpennikov.html
@@ -7,14 +7,35 @@
         <link rel="stylesheet" href="rules.css">
     </head>
     <body>  
-        <header class="header">
-            <ul class="header__structure">
-                <li class="header__button_BurgerIcon"><img src="icons/burger.svg" alt="Меню"></li>
-                <li class="header__dividerIcon1"><img src="icons/divider.svg" alt=""></li>
-                <li class="header__link_logoIcon2"><img src="imgs/Group.svg" alt="Логотип компании"></li>
-                <li class="header__dividerIon"><img src="icons/divider.svg" alt=""></li>
-                <li class="header__button_repairIcon"><img src="icons/repair.svg" alt="Вкладка починки"></li> 
-                <li class="header__button_checkStatusIcon"><img src="icons/checkstatus.svg" alt=""></li>
+        <header>
+            <ul class="menu">
+                <li class="menu__button">
+                    <img class="menu__button_burgerIcon" src="icons/burger.svg" alt="Меню">
+                </li>
+                <li class="menu__divider" id="xs-menu-element-none">
+                    <img class="menu__divider_icon1" src="icons/divider.svg" alt="">
+                </li>
+                <li class="menu__link">
+                    <img class="menu__link_logo" src="imgs/Group.svg" alt="Логотип компании">
+                </li>
+                <li class="menu__button" id="xs-menu-element-none">
+                    <img class="menu__button_callIcon" src="icons/call.svg" alt="Звонок">
+                </li>
+                <li class="menu__button" id="xs-menu-element-none">
+                    <img class="menu__button_chatIcon" src="icons/chat.svg" alt="Чат">
+                </li>
+                <li class="menu__button" id="xs-menu-element-none">
+                    <img class="menu__button_profileIcon" src="icons/profile.svg" alt="Профиль">
+                </li>
+                <li class="menu__divider">
+                    <img class="menu__divider_icon2" src="icons/divider.svg" alt="">
+                </li>
+                <li class="menu__button">
+                    <img class="menu__button_repairIcon" src="icons/repair.svg" alt="Вкладка починки">
+                </li> 
+                <li class="menu__button">
+                    <img class="menu__button_checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
+                </li>
             </ul>
         </header>
         <main class="main">
