--- a/1_3_Garpennikov.html
+++ b/1_3_Garpennikov.html
@@ -55,23 +55,23 @@
                 <div class="sideMenu__leftEage_fade"></div>
                 <div class="sideMenu__rightEage_fade"></div>
             </aside>
-            <article class="main__blockAbout">
-                <p class="main__blockAbout_text">Мы являемся авторизованным сервисным центром по ремонту
+            <article class="main__block">
+                <div class="main__block_text">Мы являемся авторизованным сервисным центром по ремонту
                     техники Dell. Только у нас вы можете отремонтировать свой ноутбу
-                    к Dell с официальной гарантией производителя.</p>
+                    к Dell с официальной гарантией производителя.</div>
+                <div сlass="main__readMore" 
+                style=" display: inline-flex;
+                        align-items: center;
+                        margin-left: 16px;
+                        margin-bottom: 16px;
+                        width: 132px;
+                        height: 24px;
+                        ">
+                    <img class="main__readMore_expandIcon" src="icons/expand.svg" alt="">
+                    <span class="main__readMore_text">Читать далее</span>
+                </div>
+                <img class="main__img" src="imgs/_MG_3223.png" alt="">
             </article>
-            <article сlass="main__readMore" 
-            style=" display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    margin-left: 16px;
-                    margin-bottom: 16px;
-                    width: 132px;
-                    height: 24px;">
-                <img class="main__readMore_expandIcon" src="icons/expand.svg" alt="">
-                <span class="main__readMore_text">Читать далее</span>
-            </article>
-            <img class="main__img" src="imgs/_MG_3223.png" alt="">
         </main>
     </body>
 </html>
