--- a/1_3_Garpennikov.html
+++ b/1_3_Garpennikov.html
@@ -58,12 +58,16 @@
             <article class="main__block">
                 <div class="main__block_text">Мы являемся авторизованным сервисным центром по ремонту
                     техники Dell. Только у нас вы можете отремонтировать свой ноутбу
-                    к Dell с официальной гарантией производителя.</div>
+                    к Dell с официальной гарантией производителя.<br>
+                    <p>Мы успешно работаем с 1992 года 
+                    и заслужили репутацию надежного партнера</p>
+                </div>
                 <div сlass="main__readMore" 
                 style=" display: inline-flex;
                         align-items: center;
                         margin-left: 16px;
                         margin-bottom: 16px;
+                        margin-right: auto;
                         width: 132px;
                         height: 24px;
                         ">
