--- a/1_3_Garpennikov.html
+++ b/1_3_Garpennikov.html
@@ -56,21 +56,11 @@
                 <div class="sideMenu__rightEage_fade"></div>
             </aside>
             <article class="main__block">
-                <div class="main__block_text">Мы являемся авторизованным сервисным центром по ремонту
+                <div class="main__block_text"><p class="main__block_par1"">Мы являемся авторизованным сервисным центром по ремонту
                     техники Dell. Только у нас вы можете отремонтировать свой ноутбу
-                    к Dell с официальной гарантией производителя.<br>
-                    <p>Мы успешно работаем с 1992 года 
-                    и заслужили репутацию надежного партнера</p>
+                    к Dell с официальной гарантией производителя.</p>
                 </div>
-                <div сlass="main__readMore" 
-                style=" display: inline-flex;
-                        align-items: center;
-                        margin-left: 16px;
-                        margin-bottom: 16px;
-                        margin-right: auto;
-                        width: 132px;
-                        height: 24px;
-                        ">
+                <div class="main__readMore">
                     <img class="main__readMore_expandIcon" src="icons/expand.svg" alt="">
                     <span class="main__readMore_text">Читать далее</span>
                 </div>
