to mentor checking
done but with problems

--- a/1_3_Garpennikov.html
+++ b/1_3_Garpennikov.html
@@ -44,6 +44,18 @@
             <article class="main__pageTitle">
                 <div class="main__pageTitle_hilight"></div>
                 <h1 class="main__pageTitle_text">Услуги и сервисы</h1>
+                <nav class="xl-main__nav">
+                    <ul class="nav__list --hidden">
+                        <li>
+                            <span>Оставить заявку</span>
+                            <img src="icons/repair.svg" alt="Вкладка починки">
+                        </li>
+                        <li>
+                            <span>Статус ремонта</span>
+                            <img src="icons/checkstatus.svg" alt="Проверить статус">
+                        </li>
+                    </ul>
+                </nav>
             </article>
             <asid>
                 <nav class="main__asideBox">
