Шрифты, ховеры, префиксы

--- a/index.html
+++ b/index.html
@@ -7,104 +7,104 @@
         <link rel="stylesheet" href="rules.css">
     </head>
     <body>  
-        <header class="b-header xl--hidden">
-            <nav class="b-header__nav b-nav">
-                <ul class="b-nav__list">
-                    <li class="b-nav__el">
-                        <img class="b-nav__burgerIcon" src="icons/burger.svg" alt="Меню">
+        <header class="header xl--hidden">
+            <nav class="header__nav nav">
+                <ul class="nav__list">
+                    <li class="nav__el">
+                        <img class="nav__burgerIcon" src="icons/burger.svg" alt="Меню">
                     </li>
-                    <li class="b-nav__el xs--hidden b-nav__el--divider">
-                        <img class="b-nav__dividerIcon1 xs--hidden" src="icons/divider.svg" alt="">
+                    <li class="nav__el xs--hidden nav__el--divider">
+                        <img class="nav__dividerIcon1 xs--hidden" src="icons/divider.svg" alt="">
                     </li>
-                    <li class="b-nav__el b-nav__el--logo">
-                        <img class="b-nav__logo" src="imgs/Group.svg" alt="Логотип компании">
+                    <li class="nav__el nav__el--logo">
+                        <img class="nav__logo" src="imgs/Group.svg" alt="Логотип компании">
                     </li>
-                    <li class="b-nav__el xs--hidden" >
-                        <img class="b-nav__callIcon" src="icons/call.svg" alt="Звонок">
+                    <li class="nav__el xs--hidden" >
+                        <img class="nav__callIcon" src="icons/call.svg" alt="Звонок">
                     </li>
-                    <li class="b-nav__el xs--hidden" >
-                        <img class="b-nav__chatIcon" src="icons/chat.svg" alt="Чат">
+                    <li class="nav__el xs--hidden" >
+                        <img class="nav__chatIcon" src="icons/chat.svg" alt="Чат">
                     </li>
-                    <li class="b-nav__el xs--hidden" >
-                        <img class="b-nav__profileIcon" src="icons/profile.svg" alt="Профиль">
+                    <li class="nav__el xs--hidden" >
+                        <img class="nav__profileIcon" src="icons/profile.svg" alt="Профиль">
                     </li>
-                    <li class="b-nav__el b-nav__el--divider">
-                        <img class="b-nav__dividerIcon2" src="icons/divider.svg" alt="">
+                    <li class="nav__el nav__el--divider">
+                        <img class="nav__dividerIcon2" src="icons/divider.svg" alt="">
                     </li>
-                    <li class="b-nav__el">
-                        <img class="b-nav__repairIcon" src="icons/repair.svg" alt="Вкладка починки">
+                    <li class="nav__el">
+                        <img class="nav__repairIcon" src="icons/repair.svg" alt="Вкладка починки">
                     </li> 
-                    <li class="b-nav__el">
-                        <img class="b-nav__checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
+                    <li class="nav__el">
+                        <img class="nav__checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
                     </li>
                 </ul>
             </nav>
         </header>
-        <main class="b-main">
-            <article class="b-main__title b-pageTitle">
-                <div class="b-pageTitle__hilight"></div>
-                <h1 class="b-pageTitle__text">Услуги и сервисы</h1>
-                <nav class="b-main__nav b-nav xl--visible">
-                    <ul class="b-nav__list xl--nav">
-                        <li>
+        <main class="main">
+            <article class="main__title pageTitle">
+                <div class="pageTitle__hilight"></div>
+                <h1 class="pageTitle__text">Услуги и сервисы</h1>
+                <nav class="main__nav nav xl--visible">
+                    <ul class="nav__list xl--nav ">
+                        <li class="nav__el">
                             <span>Оставить заявку</span>
-                            <img class="b-nav__repairIcon" src="icons/repair.svg" alt="Вкладка починки">
+                            <img class="nav__repairIcon" src="icons/repair.svg" alt="Вкладка починки">
                         </li>
-                        <li>
+                        <li class="nav__el">
                             <span>Статус ремонта</span>
-                            <img class="b-nav__checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
+                            <img class="nav__checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
                         </li>
                     </ul>
                 </nav>
             </article>
-            <aside class="b-main__sideBox b-sideBox">
-                <nav class="b-sideBox__nav b-nav">
-                    <ul class="b-nav__list b-scrollMenu">
+            <aside class="main__sideBox sideBox">
+                <nav class="sideBox__nav nav">
+                    <ul class="nav__list scrollMenu">
                         <li>
-                            <button class="b-scrollMenu__button">
+                            <button class="scrollMenu__button">
                                 Ремонтируемые устройства
                             </button>
                         </li>
                         <li>
-                            <button class="b-scrollMenu__button">
+                            <button class="scrollMenu__button">
                                 Ремонтируемые бренды
                             </button>
                         </li>
                         <li>
-                            <button class="b-scrollMenu__button">
+                            <button class="scrollMenu__button">
                                 Цены на услуги
                             </button>
                         </li>
                         <li>
-                            <button class="b-scrollMenu__button">
+                            <button class="scrollMenu__button">
                                 Адреса сервисных центров
                             </button>
                         </li>
                         <li>
-                            <button class="b-scrollMenu__button">
+                            <button class="scrollMenu__button">
                                 Специальные цены
                             </button>
                         </li>
                         <li>
-                            <button class="b-scrollMenu__button">
+                            <button class="scrollMenu__button">
                                 Отзывы
                             </button>
                         </li>
                     </ul>
-                    <div class="b-scrollMenu__eage b-scrollMenu__eage--left"></div>
-                    <div class="b-scrollMenu__eage b-scrollMenu__eage--right"></div>
+                    <div class="scrollMenu__eage scrollMenu__eage--left"></div>
+                    <div class="scrollMenu__eage scrollMenu__eage--right"></div>
                 </nav>
             </aside>
-            <article class="b-main__info b-info">
-                <div class="b-info__text"><p class="b-info__text--p1"">Мы являемся авторизованным сервисным центром по ремонту
+            <article class="main__info info">
+                <div class="info__text"><p class="info__text--p1"">Мы являемся авторизованным сервисным центром по ремонту
                     техники Dell. Только у нас вы можете отремонтировать свой ноутбу
                     к Dell с официальной гарантией производителя.</p>
                 </div>
-                <div class="b-info__readMore b-readMore">
-                    <img class="b-readMore__expandIcon" src="icons/expand.svg" alt="">
-                    <span class="b-readMore__text">Читать далее</span>
+                <div class="info__readMore readMore">
+                    <img class="readMore__expandIcon" src="icons/expand.svg" alt="">
+                    <span class="readMore__text">Читать далее</span>
                 </div>
-                <img class="b-info__img" style="margin-left: -16px;" src="imgs/firstPic.png" alt="">
+                <img class="info__img" style="margin-left: -16px;" src="imgs/firstPic.png" alt="">
             </article>
         </main>
     </body>
