--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                         <img class="nav__dividerIcon1 xs--hidden" src="icons/divider.svg" alt="">
                     </li>
                     <li class="nav__el nav__el--logo">
-                        <img class="nav__logo" src="imgs/Group.svg" alt="Логотип компании">
+                        <a href="https://mihairu-code.github.io/maket_1_3_by_Garpennikov/">
+                            <img class="nav__logo" src="imgs/Group.svg" alt="Логотип компании">
+                        </a>
                     </li>
                     <li class="nav__el xs--hidden" >
                         <img class="nav__callIcon" src="icons/call.svg" alt="Звонок">
@@ -96,15 +98,15 @@
                 </nav>
             </aside>
             <article class="main__info info">
-                <div class="info__text"><p class="info__text--p1"">Мы являемся авторизованным сервисным центром по ремонту
+                <p class="info__text">Мы являемся авторизованным сервисным центром по ремонту
                     техники Dell. Только у нас вы можете отремонтировать свой ноутбу
-                    к Dell с официальной гарантией производителя.</p>
-                </div>
+                    к Dell с официальной гарантией производителя.
+                </p>
                 <div class="info__readMore readMore">
                     <img class="readMore__expandIcon" src="icons/expand.svg" alt="">
                     <span class="readMore__text">Читать далее</span>
                 </div>
-                <img class="info__img" style="margin-left: -16px;" src="imgs/firstPic.png" alt="">
+                <img class="info__img" src="imgs/firstPic.png" alt="">
             </article>
         </main>
     </body>
