--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <nav class="main__nav nav xl--visible">
                     <ul class="nav__list xl--nav ">
                         <li class="nav__el">
-                            <span>Оставить заявку</span>
-                            <img class="nav__repairIcon" src="icons/repair.svg" alt="Вкладка починки">
+                            <a href="" class="nav__el--link">Оставить заявку</a>
+                            <button class="nav__button repair"></button>  
                         </li>
                         <li class="nav__el">
-                            <span>Статус ремонта</span>
-                            <img class="nav__checkStatusIcon" src="icons/checkstatus.svg" alt="Проверить статус">
+                            <a href="" class="nav__el--link">Статус ремонта</a>
+                            <button class="nav__button checkStatus"></button> 
                         </li>
                     </ul>
                 </nav>
