--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="TTLakes/stylesheet.css">
+        <link rel="stylesheet" href="fonts/stylesheet.css">
         <link rel="stylesheet" href="rules.css">
     </head>
     <body>  
